# distribiuted-matrix-multiplication

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  SETUP.md  deny.toml  rustfmt.toml
k8s/: kustomization.yaml  matrix-storage-pvc.yaml  mpi-env-configmap.yaml  mpijob.yaml  result-reader-pod.yaml
scripts/: e2e_test.sh  generate_matrices.py  setup_and_test.sh  verify_multiplication.py
src/: coordinator.rs  lib.rs  main.rs  matrix.rs  mpi_utils.rs  worker.rs
tests/: integration_test.rs  matrix_test.rs  mpi_integration_test.rs
tests/common/: mod.rs  mpi_mock.rs
