[package]
name = "distribiuted-matrix-multiplication"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Ozimkowski <sebastian@ozimkow.ski>"]
description = "A distributed matrix multiplication project"
license = "MIT"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpi = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

